# PracticeTestAutomation

./: .gitignore  README.md  log.html  output.xml  playwright-log.txt  practice_test_automation.robot  pyproject.toml  report.html
