[tool.poetry]
name = "robotframeworkdemos"
version = "0.1.0"
description = "Practice tutorials to use Robot Framework for browser automation."
authors = ["MZaharieva <m.st.zaharieva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
robotframework = "^6.0.2"
robotframework-browser = "^16.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
